2000-08-10  Eric Melski  <ericm@ajubasolutions.com>

	* library/msgcat1.0/msgcat.tcl: Removed erroneous [package forget]
	in msgcat namespace initializer.

2000-08-10  David Gravereaux <davygrvy@ajubasolutions.com>

	* generic/tclObj.c: r1.15 accidentally changed a global mutex
	name tclObjMutex to ObjMutex.  Put the correct name back.

2000-08-07  Eric Melski  <ericm@ajubasolutions.com>

	* tests/indexObj.test: Added tests using the [testwrongnumargs]
	command to test Tcl_WrongNumArgs.

	* generic/tclTest.c (TestWrongNumArgsObjCmd): Added test function
	for the Tcl_WrongNumArgs function.

	* generic/tclIndexObj.c (Tcl_WrongNumArgs): Corrected algorithm to
	not insert a space before the message component when objc == 0
	[Bug: 6078].

2000-07-27  Mo DeJong  <mdejong@redhat.com>

	* win/configure.in: TCL_STUB_LIB_FLAG should not
	include ${TCL_DBGX} in win/tclConfig.sh, fix that.

2000-07-25  David Gravereaux  <davygrvy@ajubasolutions.com>

	* doc/Async.3:
	* generic/tclAsync.c:
	* generic/tclInt.decls:
	* generic/tclIntPlatDecls.h:
	* generic/tclStubInit.c:
	* generic/tclTest.c:
	* mac/tclMacPort.h:
	* unix/tclUnixPort.h:
	* win/tclWinInit.c:  Thread-safe rewrite for tclAsync.c.  Added
	notifier alerting on all platforms as it was only working on Win
	before.  Removed older Win hacks that would end-up waking the
	wrong notifier in the presence of a threaded build.  All tests
	pass as before.  New test cases will be added soon for the new
	behavior.  [BUG: 5791]

2000-07-25  Eric Melski  <ericm@ajubasolutions.com>

	* generic/tclVar.c (CallTraces): Added check for VAR_TRACE_ACTIVE
	on the array containing the variable before executing traces on
	that array, to conform with normal variable traces and the
	documentation, which states that while executing a trace, other
	traces on that variable are disabled. [Bug: 6049].

	* win/tclWinPipe.c (BuildCommandLine): Added Tcl_DStringFree call
	to prevent potential memory leaks [Bug: 6041].
